--- a/latex/recipe-040.tex
+++ b/latex/recipe-040.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 猪肥膘煮熟，晾冷去皮，修整齐；火腿切细末；韭菜只用白头子，切为磉磴节子；
+\step 猪肥膘煮熟，晾冷去皮，修整齐；火腿切细末；韭菜只用白头子，切为磉礅节子；
 调蛋清豆粉。
 
 \step 修好的肥膘片成一寸二宽、一寸五长、一分厚的薄片；猪腰的片法稍小于肥膘，各
