--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -139,11 +139,9 @@
 
 \recipelist{39,48,49}。“擀”，《四》本作“扞”。据《八》本改。
 
-\reciperef{40}。“磉磴”。
+\reciperef{40}。“磉礅”，《四》本作“磉磴”。径改。
 “磉”，{s\v{a}ng}{ㄙ\kern-.333333emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}
 柱下石。
-“磴”，{d\`{e}ng}{ㄉ\kern-.333333emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
-石阶。
 
 \recipelist{41,42,71,121,257}。“剞”，《四》本作“𠟤”。径改。
 
