--- a/latex/recipe-169.tex
+++ b/latex/recipe-169.tex
@@ -51,7 +51,7 @@
 
 \step 用八寸盘一个，先将三分之二切好的黄瓜、萝卜、莴笋作底；蜇皮卷分层重叠摆
 好；再用三分之一的黄瓜、萝卜、莴笋等片分别颜色隔开，㮟在蜇皮卷上；或一层蜇卷，
-再摆几片黄瓜、萝卜、莴笋，一层盖一层摆上均可；顶上均用蛰卷封口，总以美观为宜。
+再摆几片黄瓜、萝卜、莴笋，一层盖一层摆上均可；顶上均用蜇卷封口，总以美观为宜。
 摆好后将盐、白糖、醋、香油等调匀淋上即成。
 
 \features
