--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -58,11 +58,11 @@
 
 \preparation
 
-\step 海参用温水泡十六小时，洗净泥砂，挖去肠脏，切成长一寸、宽六分的条方块；用
+\step 海参用温水泡十六小时，洗净泥沙，挖去肠脏，切成长一寸、宽六分的条方块；用
 二汤汆二次，用清水漂冷心，再用净布一方包好。鱼翅用温水泡十分钟，洗净上面的胶
 水，去净子骨和杂质，放入大碗中，加清水一斤半，上笼蒸一小时，出笼滗去水，再用二
 汤汆一次，用清水漂冷心，用稀眼净布一方包好。珧柱用温水泡十分钟，洗净后用稀眼净
-布包好。口蘑用温水泡五分钟，洗净泥砂，去净根和杂质，用稀眼净布包好。大金钩洗
+布包好。口蘑用温水泡五分钟，洗净泥沙，去净根和杂质，用稀眼净布包好。大金钩洗
 净。墨鱼用温水泡半小时，去净骨和杂质，将每条撕成两半。猪骨洗净。猪肘子肉去净茸
 毛，刮洗干净，切成四大块。肥母鸡宰杀、去毛、去肠脏，切成两半，每半再切成两块。
 肥瘦火腿刮洗干净，切成一寸二长、六分宽的条块。冬笋去壳，去老根，取用嫩尖部分，
