--- a/latex/recipe-046.tex
+++ b/latex/recipe-046.tex
@@ -53,7 +53,7 @@
 小时，至肠皮起皱折为合适。
 
 \step 干豌豆用温水泡十二小时（水要没过豌豆一寸），即泡胀，然后倒入竹筲箕内滤去
-水。随后把苏打放入豌豆内抄匀，倒在锅内加水，放在微火上烧，焅两小时，豌豆已至极
+水。随后把苏打放入豌豆内抄匀，倒在锅内加水，放在微火上烧，㸆两小时，豌豆已至极
 烂，即倒入筲箕内，把水滤干，倒入木瓢内（舀水的瓢），然后双手持漏瓢在豌豆上用力
 压，边压边移，豌豆泥就由漏瓢孔内冒出，透不过孔的，即为豌豆壳不用。
 
