--- a/latex/recipe-028.tex
+++ b/latex/recipe-028.tex
@@ -49,10 +49,10 @@
 后，取出，用刀全部刮去烧黑的一层，现出黄色时，入清水清洗两次待用。
 
 \step 鼎锅置于旺火上，放入碎骨垫底，加汤，再投入肘子。汤一冲开，打净血泡，即端
-离旺火放在小火上焅起。
+离旺火放在小火上㸆起。
 
 \step 油在炒锅内用旺火烧热，下冰糖炒成汁，舀入少许鼎锅内的汤把糖汁冲散。加料
-酒、酱油、葱（挽成结）、姜（拍破）、盐，用汤瓢荡匀翻入鼎锅。继续焅两小时，用筷
+酒、酱油、葱（挽成结）、姜（拍破）、盐，用汤瓢荡匀翻入鼎锅。继续㸆两小时，用筷
 子将肘子拈入大圆盘摆好。滋汁滗入炒锅内，加味精，勾芡，收酽后淋在肘子上即成。
 
 \features
