--- a/latex/recipe-025.tex
+++ b/latex/recipe-025.tex
@@ -47,7 +47,7 @@
 拍破，对剖。
 
 \step 油在锅内烧至七成热。将肉煵干水气，加入盐、白糖、料酒、葱、姜，然后烹入清
-水。在旺火上烧开后，打净泡沫，加豆腐乳汁，移至文火上焅至肉𤆵，拈去姜渣，盛入白
+水。在旺火上烧开后，打净泡沫，加豆腐乳汁，移至文火上㸆至肉𤆵，拈去姜渣，盛入白
 瓷条盘。
 
 \features
