--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -92,7 +92,7 @@
 
 \features
 
-此菜在成都著名已久，由于用料复杂，水分较少，加之封固坛口微火煨焅而成，保持了各
+此菜在成都著名已久，由于用料复杂，水分较少，加之封固坛口微火煨㸆而成，保持了各
 种材料的原汁和原气。因此，菜呈金红色，鲜艳美观，肉极𤆵\footnotemark 烂，鲜美而
 浓香，可家常自吃，又可用于筵席。
 
