--- a/latex/recipe-056.tex
+++ b/latex/recipe-056.tex
@@ -150,10 +150,10 @@
 \step 汤锅放炉上，将棒子骨、排骨、蹄子、鸡、鸭依次放入汤锅中，倒入清水二十五
 斤，用旺火烧开，去净泡沫，炖一小时。而后捞出，漂于温热水中。用猪肉茸一斤，加清
 水一斤兑匀调散，倒入汤锅中；待瘦肉和泡沫浮起时，用漏瓢打净。将鸡、鸭、蹄、骨等
-用热水洗净，放于汤锅中，用微火焅半小时，将鸡、鸭捞出另作别用，再将各骨捞出漂温
+用热水洗净，放于汤锅中，用微火㸆半小时，将鸡、鸭捞出另作别用，再将各骨捞出漂温
 水中。然后将猪肉茸四斤，加清水三斤调散倒于汤锅中；待肉茸浮起时，用漏瓢把它挤成
 四至五个肉饼。再将汤面浮油吹净，将各骨用温水洗净，轻轻放入汤锅中；随后将肉饼放
-于各骨之上，用小微火焅。此时汤已变色，很像料酒颜色。鸡茸内加清水一斤调散。待使
+于各骨之上，用小微火㸆。此时汤已变色，很像料酒颜色。鸡茸内加清水一斤调散。待使
 用清汤时，再将鸡茸倒入汤中，待泡沫和肉茸浮起后，将泡沫和肉茸打去，即成清汤。
 \end{subrecipe}
 }
