--- a/latex/recipe-122.tex
+++ b/latex/recipe-122.tex
@@ -58,7 +58,7 @@
 
 \step 青菜心用清水洗净，削去筋皮，切成长一寸四，宽、厚各四分的长方条。将锅置于
 旺火上，放入猪油一两，等油烧热时，将青菜心放入煸四、五分钟，再掺入清汤，汤要淹
-过菜心，焖二十分钟即𤆵，端至微火上焅起。
+过菜心，焖二十分钟即𤆵，端至微火上㸆起。
 
 \step 另将锅放在旺火上烧热，放入猪油、葱白，煸至油冒烟时，即将鸭舌、掌从笼内取
 出，去姜葱不用，将滋汁滗入油锅中，然后将锅中葱白捞去，加入酱油、味精、胡椒面和
