--- a/latex/recipe-290.tex
+++ b/latex/recipe-290.tex
@@ -46,7 +46,7 @@
 鸭子杀后去内脏洗净，剔去骨头，切成约二指半大的薄片，网油切成数张手掌大的三角
 块，将豆粉和蛋白调匀，涂于网油上，然后将鸭片、冬菇、玉兰片、火腿各二、三片，摆
 在网油上，分别以沸油微炸（约炸两分钟），捞起滤干倾入盛好清水和鸭骨的锅里（水要
-刚淹没鸭卷），同时加进冰糖色和绍酒，置于文火上焅熟为止（约需两小时）。起锅时加
+刚淹没鸭卷），同时加进冰糖色和绍酒，置于文火上㸆熟为止（约需两小时）。起锅时加
 进已烧好的鲜菜心和味精及少许水豆粉，扯二流芡，伴以花卷同吃，
 
 \features
