Correct the comment for CHAN

--- a/latex/recipe-063.tex
+++ b/latex/recipe-063.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 将鸡脯肉用刀把上面的一层薄皮片去，再在菜墩上用刀尖劖（音沾，即在肉上用刀
+\step 将鸡脯肉用刀把上面的一层薄皮片去，再在菜墩上用刀尖劖（音馋，即在肉上用刀
 尖不规则的轻轻戳，但不要戳穿）过，使鸡肉容易入味。然后切成四分宽厚的条，再横着
 肉纹切成四分见方的丁。用豆粉加盐、料酒、在碗内倒入鸡丁拌合均匀。
 
