Revise the collation note for recipe 63

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -170,7 +170,8 @@
 \reciperef{61}。“窝油”，一种传统手工技艺酿造酱油。因酱胚产生的原汁液是从盛曲料
 容器慢慢滴入窝内，故名窝油。又称白酱油。
 
-\reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
+\reciperef{63}。“劖（音馋……）”，各本皆作“音沾”。误。径改。
+据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
 \recipelist{67,68,82,92,118,127,150,255,280,301}。“熘”，《四》本作“溜”。径改。
