--- a/latex/recipe-132.tex
+++ b/latex/recipe-132.tex
@@ -48,9 +48,9 @@
 
 \preparation
 
-\step 鲤鱼去鳞、鳃和内脏，用净布沾干水，用刀将鱼身两面各斜划六至七刀，刀的深处
+\step 鲤鱼去鳞、鳃和内脏，用净布搌干水，用刀将鱼身两面各斜划六至七刀，刀的深处
 到鱼刺为度，距离相等；先用料酒、酱油在碗内将鱼浸约五分钟，使之入味；取出用净布
-沾干再用水豆粉均匀地涂在鱼身上。
+搌干再用水豆粉均匀地涂在鱼身上。
 
 \step 葱切成葱花和葱丝各一半；蒜、姜均切成末和丝各一半；泡辣椒去籽，切成细丝；
 兰片、菌子均切成一寸二长的细丝。
