--- a/latex/recipe-077.tex
+++ b/latex/recipe-077.tex
@@ -55,7 +55,7 @@
 \step 鱼辣椒折把，去尽籽，剁成细末；姜刮皮，切成细末；葱切成细葱花；用酱油、白
 糖、醋、红油、花椒面，调匀成滋汁。
 
-鸡去掉葱、姜、花椒颗，用净布沾干水气，投入八成热的油锅炸起，至炸熟捞起，在案板
+鸡去掉葱、姜、花椒颗，用净布搌干水气，投入八成热的油锅炸起，至炸熟捞起，在案板
 上砍成一字条镶在盘内，即将调好的滋汁全部淋上即成。
 
 \features
