--- a/latex/recipe-099.tex
+++ b/latex/recipe-099.tex
@@ -67,7 +67,7 @@
 腹内，装好后用削细的竹签（约五寸长）像缝衣似的将鸡颈开口处锁住（从外面看如同一
 只有骨的鸡），放入沸汤锅中烫一下捞出，将鸡翅翻在背上盘起，鸡头仰翻在翅的下面压
 住，再装入大蒸碗内，鸡背向上，不加水上笼干蒸；蒸约两小时，用竹筷以能将鸡翅戳破
-为适合，然后把它翻入盘内，用干布帕将鸡身的水气沾干，全身抹上酱油；再将鸡蛋加干
+为适合，然后把它翻入盘内，用干布帕将鸡身的水气搌干，全身抹上酱油；再将鸡蛋加干
 豆粉搅打成蛋清豆粉抹上。
 
 \step 大炒锅内放入菜油，在旺火上烧至八成热时，即将鸡顺着锅边放入，腹部向上（向
