--- a/latex/recipe-185.tex
+++ b/latex/recipe-185.tex
@@ -53,7 +53,7 @@
 鱼肚相等长度。
 
 \step 鸡脯、肥膘分别砸茸，加鸡蛋清、水豆粉、盐少许，搅匀成“鸡糁”。再将鱼肚用好
-汤煨过，捞起挤干水份，再用干帕子沾干，每个抹上蛋清豆粉（鸡蛋清一个，干豆粉三钱
+汤煨过，捞起挤干水份，再用干帕子搌干，每个抹上蛋清豆粉（鸡蛋清一个，干豆粉三钱
 调匀），再放上鸡糁，然后用菠菜杆细丝及火腿细丝，横竖在“糁”上摆成棋盘形，放笼上
 蒸五分钟，取出拣入碗内。走菜时灌入扫好的清汤即成。
 
