--- a/latex/recipe-029.tex
+++ b/latex/recipe-029.tex
@@ -45,7 +45,7 @@
 
 \preparation
 
-\step 将猪肉残毛拈去，刮洗干净。入汤锅，除尽血水。煮熟捞起，用净布沾干水气，
+\step 将猪肉残毛拈去，刮洗干净。入汤锅，除尽血水。煮熟捞起，用净布搌干水气，
 抹上酱油后投入烧至八成热的油锅内，炸至皮色金黄起皱时捞起。葱切成长节，姜拍破待
 用。
 
