--- a/latex/recipe-139.tex
+++ b/latex/recipe-139.tex
@@ -46,7 +46,7 @@
 
 \preparation
 
-\step 鱼挖腹去鳞，砍去头尾，洗净后用净布沾干水汽，抹上葱、姜、料酒、盐，隔几分
+\step 鱼挖腹去鳞，砍去头尾，洗净后用净布搌干水汽，抹上葱、姜、料酒、盐，隔几分
 钟即入味，投入烧至八成热的油锅，炸进皮捞起，装入盘内待用。
 
 \step 萝卜削皮洗净，连同火腿分别切成三寸长的二粗丝。
