--- a/latex/recipe-193.tex
+++ b/latex/recipe-193.tex
@@ -53,7 +53,7 @@
 透；连同火腿、蛋皮共三样各用一半，分别切成黑瓜子大小的斜方形小片，用盘装好；其
 余各一半分别切成细丝，另用盘装好；瘦猪肉砸成茸子待用。
 
-\step 片好的鱿鱼用好汤煨过，滤起用净布沾干水气，先在每片鱿鱼面上用蛋清豆粉抹上
+\step 片好的鱿鱼用好汤煨过，滤起用净布搌干水气，先在每片鱿鱼面上用蛋清豆粉抹上
 一个半月形，再用“鸡糁”涂一层在蛋清豆粉面上，仍成半月形。每个涂好后，将切好的火
 腿、丝瓜皮、蛋皮细丝小片等，先小片后细丝顺着半月形的糁一路路安成花边，成荷包
 状。安好后将鱿鱼逐个拣在大瓷盘内，上笼蒸三分钟取出。
