--- a/latex/recipe-151.tex
+++ b/latex/recipe-151.tex
@@ -55,7 +55,7 @@
 刀，距离相等，用盐、料酒混抹，并使之浸入鱼的刀口处，放入盘中待用。
 
 \step 将鸡蛋摊成蛋皮；木耳、火腿、茨菰、丝瓜、蛋皮分别切成八分长的半圆形（为五
-色）；再用干净布将抹鱼的汁沾干，然后将切好的五色片插于刀口处，在每一个开刀处插
+色）；再用干净布将抹鱼的汁搌干，然后将切好的五色片插于刀口处，在每一个开刀处插
 入各色一片，共五片；插好后将鱼腹向下放于大盘内，再放入姜片、葱节、花椒、盐、胡
 椒、料酒，入笼内大火蒸十五分钟馏起。
 
