--- a/latex/recipe-144.tex
+++ b/latex/recipe-144.tex
@@ -54,7 +54,7 @@
 
 \preparation
 
-\step 鱼剖腹、去内脏、去鳞、挖鳃，鱼身立刀划数刀，沾干水气，用盐、胡椒、料酒将
+\step 鱼剖腹、去内脏、去鳞、挖鳃，鱼身立刀划数刀，搌干水气，用盐、胡椒、料酒将
 鱼身抹遍，加葱、姜用网油包好，上笼急火蒸十五分钟至熟；（走菜时去掉网油、葱、
 姜。）
 
