--- a/latex/recipe-194.tex
+++ b/latex/recipe-194.tex
@@ -53,10 +53,10 @@
 
 \step 鸡脯肉、肥猪膘、鸡蛋清、豆粉，合搅成“糁”。鸡蛋清合干豆粉搅成蛋清豆粉。选
 约五寸长的丝瓜刮去粗皮，洗净，车成两张丝瓜皮，在沸水内煮过，捞入冷水浸透，将水
-气沾干，切成二粗丝，一寸五长计三十二丝。熟火腿与丝瓜丝同样切成三十二丝。猪瘦肉
+气搌干，切成二粗丝，一寸五长计三十二丝。熟火腿与丝瓜丝同样切成三十二丝。猪瘦肉
 打成肉茸，用清水发起澥散待用。
 
-\step 海参用净布沾干水气，每片上抹遍蛋清豆粉，铺在墩子上，将搅好的糁分放在三十
+\step 海参用净布搌干水气，每片上抹遍蛋清豆粉，铺在墩子上，将搅好的糁分放在三十
 二个海参片的窄的一端；再将火腿丝、丝瓜丝各一根横起，分别镶在三十二个糁上；然后
 将海参片放在手上，一个一个地把五齿翻转来贴在糁上。齿的距离一分宽。摆在抹油的白
 铝盘内，上笼蒸三分钟，取出放入大薄碗内待用。
