--- a/latex/recipe-091.tex
+++ b/latex/recipe-091.tex
@@ -56,7 +56,7 @@
 厚一分的肉片二十四张，并用刀尖把每片的四角及中心轻轻戳一个孔；瘦火腿先切成细
 丝，再横着切成细末；鸡蛋清二个和干豆粉用碗调成蛋清豆粉。
 
-\step 将肥膘肉二十四片平铺在盘内，用净布在热水中浸湿拧干后将肉片上的油沾干，将
+\step 将肥膘肉二十四片平铺在盘内，用净布在热水中浸湿拧干后将肉片上的油搌干，将
 蛋清豆粉抹在每片肉的上面一层，并放上火腿末；渍起的鸡片去掉姜广葱，把每片展开，
 平放在火腿末上。
 
