--- a/latex/recipe-219.tex
+++ b/latex/recipe-219.tex
@@ -51,7 +51,7 @@
 \step 选大小均匀的菠菜叶三十片，用开水泹后用清水漂起；将菠菜心泹后同样漂起；再
 将鸡脯肉及肥膘捶茸，同蛋清打成“糁”，放入碗内待用。
 
-\step 将余的一个蛋清拌成蛋清豆粉，将清水漂起的菠菜叶平铺于案上，沾干水份，又将
+\step 将余的一个蛋清拌成蛋清豆粉，将清水漂起的菠菜叶平铺于案上，搌干水份，又将
 鸡糁刮在菠菜叶上，抄头裹起成一寸五长、四分过心的圆筒，平放在大盘内，每个照样，
 裹完为止。再入笼大火蒸五分钟，取出拣入碗内，摆成三叠水待用。
 
