--- a/latex/recipe-149.tex
+++ b/latex/recipe-149.tex
@@ -51,7 +51,7 @@
 分、长一寸二的薄片；火腿剁成蒙子；鸡蛋合干豆粉搅成蛋清豆粉；生菜淘洗干净漂起，
 临走菜时捞起滤干水气，加白糖、盐、醋、香油拌匀。
 
-\step 用条盘一个，将肥膘全部铺起，用净布入热水透过拧干，在肥膘上分别沾去油质
+\step 用条盘一个，将肥膘全部铺起，用净布入热水透过拧干，在肥膘上分别搌去油质
 一至二次后，匀净地抹上蛋清豆粉。先将笋片贴在肥膘的半边，再贴上火腿蒙子在其余
 半边。然后把剩余的蛋清豆粉合鱼片拌匀，一片一片地盖在铺好笋子、火腿蒙的肥膘上
 盖好。
