--- a/latex/recipe-090.tex
+++ b/latex/recipe-090.tex
@@ -56,7 +56,7 @@
 入清水中。鸡蛋清与干豆粉一起拌匀成为蛋清豆粉。
 
 \step 将熟猪肥膘肉圆片二十四片平铺在大平盘中，用净布一方在沸水内浸透，挤干水轻
-轻沾净肥肉上的油汁，再用手指粘蛋清豆粉在肥膘片上厚厚地抹上一层，然后将盆内“鸡
+轻搌净肥肉上的油汁，再用手指粘蛋清豆粉在肥膘片上厚厚地抹上一层，然后将盆内“鸡
 糁”做成直径六分大的圆珠，放在肥膘圆片上，再用手指粘少许凉水将圆珠抹得圆润光
 滑，随即用手指取少许火腿末放在圆珠上使它粘稳，便成为鸡塔。
 
