--- a/latex/recipe-206.tex
+++ b/latex/recipe-206.tex
@@ -46,7 +46,7 @@
 
 \step 鲜茨菰将皮削净，洗净皮渣，用刀拍烂，剁成细泥（不现颗粒），加细酒米粉拌
 匀，用蒸碗盛起上笼蒸熟取下，趁热将茨菰泥分成汤圆大小的量，用干净湿帕垫在手上逐
-个包入玫瑰馅，捏成扁圆形的饼，沾清水将交口处抹光滑。全部包好后，撒上一层过箩的
+个包入玫瑰馅，捏成扁圆形的饼，蘸清水将交口处抹光滑。全部包好后，撒上一层过箩的
 干豆粉待用。
 
 \step 菜油烧至九成火，将饼放入油锅内炸，见起金黄色即用漏瓢捞起上盘，饼上撒白
