--- a/latex/recipe-242.tex
+++ b/latex/recipe-242.tex
@@ -41,7 +41,7 @@
 \preparation
 
 \step 金丝蜜枣去皮，去核，切成二粗丝。白荷花用手将花瓣搬下（小瓣不用），淘洗干
-净，将水气沾干；每张花瓣内裹入三根枣丝成卷形，并抹蛋清豆粉交口待用。
+净，将水气搌干；每张花瓣内裹入三根枣丝成卷形，并抹蛋清豆粉交口待用。
 
 \step 菜油烧至八成火，将裹好的卷再在蛋清豆粉内裹一层，即放入油锅内炸。时间不宜
 太长，蛋清豆粉炸透即捞起盛入盘内，撒白糖。
