--- a/latex/recipe-228.tex
+++ b/latex/recipe-228.tex
@@ -52,7 +52,7 @@
 干，铡成细末；蛋黄调散。火腿末、菜叶末、蛋黄分开放入碗内，再将蛋清浆分别放入这
 三种色的碗内调匀待用。
 
-\step 豆腐皮上笼蒸至五分钟，取出沾干水气，每张趁热抹上一层一个颜色，抹完为止。
+\step 豆腐皮上笼蒸至五分钟，取出搌干水气，每张趁热抹上一层一个颜色，抹完为止。
 再一张一张地重起，成为三种颜色。四张豆腐皮一叠，如是再重四张，共为两叠。上笼蒸
 五分钟取出，晾冷用刀切成一寸八长、二分五宽的条子定碗，定时有颜色的一面挨碗底，
 以二十四条摆成万字形；其余的用碗装满，加入鸡油、料酒及清汤少许，再上笼蒸五分
