--- a/latex/recipe-230.tex
+++ b/latex/recipe-230.tex
@@ -55,7 +55,7 @@
 粉、面粉、味精和鸡蛋泡都加入豆腐汁的碗内，搅匀后再加入化猪油搅匀，成为“豆腐
 糁”。用鸡蛋清与干豆粉调成蛋清豆粉。
 
-\step 熟肥猪肉片二十四片分开摊在盘内，用拧干的热布帕把油沾干，将每个肉片上抹上
+\step 熟肥猪肉片二十四片分开摊在盘内，用拧干的热布帕把油搌干，将每个肉片上抹上
 一层蛋清豆粉；再用调羹将豆腐糁舀在上面，平摊约三分厚（四边稍薄，贴时才不会
 流）。鸡蛋黄（三个）搅散，倒入猪油抹过的炒锅内（用猪油很少，使蛋不巴锅即可），
 于旺火上摊成蛋皮。蛋皮及痩火腿先各切成细丝，再切成细末，按在摊好的豆腐糁上，每
