--- a/latex/recipe-195.tex
+++ b/latex/recipe-195.tex
@@ -64,7 +64,7 @@
 \step 蝴蝶海参片投入三级清汤中，加盐煮约十分钟，而后使之入味，捞出铺于盘上以净
 布揩干，逐片把白色一面用蛋清豆粉抹匀，再用刀尖沾碗内的鱼糁放在蝴蝶片的中央，成
 为蝴蝶的腹部（如图\,\ref{fig:making-the-shape}\,）；每片用糁长一寸、宽三分、厚
-四分，形如橄榄，随后用手沾清水涂抹光滑。
+四分，形如橄榄，随后用手蘸清水涂抹光滑。
 
 \step 冬笋去壳，切成六分长的细丝四十八根，其余均切为三分长的短丝；火腿切成三分
 长的细丝；用手把火腿丝和笋丝相间地横镶于腹部上面，另外，以两根笋丝镶于每个蝴蝶
