--- a/latex/recipe-198.tex
+++ b/latex/recipe-198.tex
@@ -43,7 +43,7 @@
 放于干净的菜墩上，用漏瓢压成豆泥，以能通过漏瓢的细孔为度。
 
 \step 炒锅烧红后提起，以净布揩净，放回炉上，放入猪油，油热时即将豆泥放入。炒至
-豆泥水分将净时，放入白糖炒匀，炒至在锅内不沾锅底、不沾汤瓢为度；再将猪油、白糖
+豆泥水分将净时，放入白糖炒匀，炒至在锅内不粘锅底、不粘汤瓢为度；再将猪油、白糖
 和玫瑰放入，溶化后混合炒匀即成。
 
 \features
