--- a/latex/recipe-199.tex
+++ b/latex/recipe-199.tex
@@ -44,7 +44,7 @@
 有面粉疙瘩后，再慢慢倾入清水三两，边倾边搅，搅成稀糊状的鸡蛋面糊。
 
 \step 把锅放在小火上，放入三两清水，烧开后将鸡蛋面糊慢慢倾入锅中，边倾边速用汤
-瓢搅拌，要搅匀；至浓缩而不沾时，倒入抹好油的平盘上，按成四分厚的饼，晾冷凝固
+瓢搅拌，要搅匀；至浓缩而不粘时，倒入抹好油的平盘上，按成四分厚的饼，晾冷凝固
 （夏天放入冰箱则凝固较快）。然后切成长一寸二、宽厚四分的长条形，滚上干豆粉，再
 用旺火将油锅中的菜油烧红时，即把它倒入炸约二分钟捞出（如有条块并连，应掰开）。
 待油再烧红时，复倒入油锅中炸至呈金黄色时捞出，滤尽油，即成炸好的锅炸。
