--- a/latex/recipe-218.tex
+++ b/latex/recipe-218.tex
@@ -65,7 +65,7 @@
 别酿入混合肉末成酿茄片。
 
 \step 菜油舀入锅中，放在旺火上烧至微冒烟时，即移微火上；然后用手逐一将酿茄片立
-着在蛋清豆粉中滚一转，沾上封口处，随即放入油锅中炸；要边沾边炸，不可全部沾好再
+着在蛋清豆粉中滚一转，粘上封口处，随即放入油锅中炸；要边粘边炸，不可全部粘好再
 炸，否则易裂口；待茄片炸至周边呈金黄色即捞起，边炸边捞。全部炸完后，把余下蛋清
 豆粉加入清水少许调匀，将茄饼放入，用手从下向上轻轻翻转，把蛋清豆粉沾裹完，再放
 入油中炸成金黄色捞起，滤尽油，摆入盘中。
