Add a collation note for recipe 115

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -211,6 +211,8 @@
 
 \recipelist{111,295}。“罐”，《四》本作“罆”。据《八》本改。
 
+\reciperef{115}。“硝”，亚硝酸钠，化学式NaNO\textsubscript{2}。
+
 \recipelist{120,121,123,223,257,262}。“肫”，《四》本作“𬂁”。径改。“肫”，鸟类的
 胃。
 
