--- a/latex/cookbook.cls
+++ b/latex/cookbook.cls
@@ -1,6 +1,6 @@
 % BSD 3-Clause License
 %
-% Copyright (c) 2023 Quux System and Technology. All rights reserved.
+% Copyright (c) 2023, 2024 Quux System and Technology. All rights reserved.
 %
 % Redistribution and use in source and binary forms, with or without
 % modification, are permitted provided that the following conditions are met:
@@ -29,7 +29,7 @@
 %
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{cookbook}
-	[2023/01/01 v1.0.0 XeLaTeX document class]
+	[2024/02/22 v1.0.1 XeLaTeX document class]
 \LoadClass[openany]{book}
 \usepackage[
 	paper=a5paper,
