--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -48,6 +48,7 @@
 			GitCommitName={\gitcommitname},
 			GitCommitHash={\gitcommithash},
 			GitCommitterDate={\gitcommitterdate},
+			PDFBuildDate={\pdfbuilddate},
 			PDFBuildHost={\pdfbuildhost}
 		},
 		hidelinks
