--- a/latex/recipe-305.tex
+++ b/latex/recipe-305.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{有壳冬笋}{二斤}
-\ingredient{芽黄}{二两五}
+\ingredient{芹黄}{二两五}
 \ingredient{干海椒}{五个}
 \ingredient{小磨麻油}{少许}
 \ingredient{食盐、味精}{少许}
