--- a/latex/recipe-214.tex
+++ b/latex/recipe-214.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{四吃露笋}
+\begin{recipe}{四吃芦笋}
 
 \ingredients
 
-\ingredient{露笋}{一听}
+\ingredient{芦笋}{一听}
 \ingredient{芝麻酱}{五钱}
 \ingredient{番茄酱}{一两}
 \ingredient{芥末}{五钱}
@@ -46,9 +46,9 @@
 
 \preparation
 
-\step 用开刀将露笋一听打开，听内的原汁滗入一个干净碗内待用。露笋倒入另一个碗，
-撕去有根露笋的皮衣，放在墩子上，以笋尖整齐为度，用刀从半中腰切断；笋头先横放于
-条盘内，分两堆，刀口都向外，再将笋尖放在笋头的上边；摆好后再将露笋的原汁汤由上
+\step 用开刀将芦笋一听打开，听内的原汁滗入一个干净碗内待用。芦笋倒入另一个碗，
+撕去有根芦笋的皮衣，放在墩子上，以笋尖整齐为度，用刀从半中腰切断；笋头先横放于
+条盘内，分两堆，刀口都向外，再将笋尖放在笋头的上边；摆好后再将芦笋的原汁汤由上
 面淋入盘内，走菜时，配下面四样碟子上席。
 
 \step 番茄酱五钱、汤一两、香油一钱、盐一分配为一个碟子。
@@ -61,7 +61,7 @@
 
 \features
 
-名为“四吃露笋”，即吃四种味道，鲜嫩、清香，特别适宜夏季。
+名为“四吃芦笋”，即吃四种味道，鲜嫩、清香，特别适宜夏季。
 
 \end{recipe}
 
