Revise note for recipe 214

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -270,7 +270,7 @@
 
 \reciperef{212}。“大拇指”，《四》本作“大姆指”。据《中》本改。
 
-\reciperef{214}。“椒麻”，制法见\recipepage{50}。
+\reciperef{214}。“芦笋”，《四》本作“露笋”。径改。“椒麻”，制法见\recipepage{50}。
 
 \reciperef{217}。“再放入炒好的馅于萝卜腹内，用盖盖好……”\\%
 “用盖盖好”，《四》本《八》本作“用盖好”。径补。
