--- a/latex/recipe-037.tex
+++ b/latex/recipe-037.tex
@@ -59,7 +59,7 @@
 继续用水清洗。这样两面反复多洗几次，直到肥肠白净涩手，无臭味为止。最后仍把有油
 的一面翻到内面去，洗净后放在开水锅内煮一刻钟捞出。再把肠两端用刀修去一分左右，
 使之整齐。每段再分别切成两段（共六段）。用大蒸碗盛起，放入清水、盐、葱白三段、
-料酒、花椒、姜等佐料，使水淹没过肥肠，上笼用旺火蒸三小时，至肥肠起着皱折为适
+料酒、花椒、姜等佐料，使水淹没过肥肠，上笼用旺火蒸三小时，至肥肠起着皱褶为适
 合。
 
 \step 葱白用刀切成一寸长段，两头切成细花翻起。甜酱用香油、白糖拌合调匀。大蒜去
