Revise the note for recipe 037

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -134,8 +134,8 @@
 
 \recipelist{33,34,147,188,191}。“圆子”，《四》本作“元子”。径改。
 
-\reciperef{37}。“扳指”，《四》本作“斑指”，《中》本《七》本作“班指”。径
-改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
+\reciperef{37}。“扳指”，《四》本作“斑指”，《中》本《七》本作“班指”。径改。
+“……至肥肠起着皱褶为适合。”“皱褶”，《四》本作“绉折”，《八》本作“皱折”，径改。
 
 \recipelist{39,48,49}。“擀”，《四》本作“扞”。据《八》本改。
 
