--- a/latex/recipe-046.tex
+++ b/latex/recipe-046.tex
@@ -50,7 +50,7 @@
 物（不要撕掉油）。这样反复清洗几次，洗至肠白，涩手，无臭味为止；再把有油的一面
 翻到内面去。肥肠洗净后在开水锅内煮约一刻钟捞出，用刀修去两头约一分厚，装入大蒸
 碗内，加葱白、花椒、料酒、盐、姜等佐料和清水四两（以没过肥肠为度），上笼蒸约三
-小时，至肠皮起皱折为合适。
+小时，至肠皮起皱褶为合适。
 
 \step 干豌豆用温水泡十二小时（水要没过豌豆一寸），即泡胀，然后倒入竹筲箕内滤去
 水。随后把苏打放入豌豆内抄匀，倒在锅内加水，放在微火上烧，㸆两小时，豌豆已至极
