--- a/latex/recipe-048.tex
+++ b/latex/recipe-048.tex
@@ -66,7 +66,7 @@
 
 \step 菠菜淘洗干净，去茎留叶，在木瓢内用手搓揉成菜泥，用纱布包好挤出绿色菜汁，
 和入干面粉内拌匀（汁不够时可略加清水）用力揉成面团；再平均扯成二十四个小面剂，
-用小面棍擀成圆形饺皮。把拌好的馅分摊在饺皮上对折包成半圆形，饺边用手捏成细折，
+用小面棍擀成圆形饺皮。把拌好的馅分摊在饺皮上对折包成半圆形，饺边用手捏成细褶，
 然后用清水把饺子煮好，端离火口，用时再捞出。
 
 \step 猪油放在炒锅内，于旺火上烧热，放入姜、葱白、料酒和清汤，开锅后用漏瓢将
