JIAOZHU -> WEIZHU In the Collation Notes, change footnote to endnote.

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -84,7 +84,7 @@
 
 \recipelist{6,9,45,58,64,91,93,99,197,230,260}。“煳”，《四》本作“糊”。径改。
 
-\reciperef{7}。《四》本无脚注{\footnotesize\circled{1}}。据《中》本补。
+\reciperef{7}。《四》本无尾注{\footnotesize\circled{1}}。据《中》本补。
 
 \recipelist{8,11,16,17,35,54,73,78,109}等多篇。“醪糟”，各本皆作“𰪿糟”。径改。
 “𰪿”系“𫃑”之类推简化字。
@@ -182,7 +182,7 @@
 
 \reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
-\reciperef{74}。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
+\reciperef{74}。尾注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
 “……盛产于成都附近山崖中。”“三菌”，鸡𭎂（㙡）{z\={o}ng}%
 {ㄗ\kern-.333333emㄨ\kern-.333333emㄥ}菌。
 
@@ -225,11 +225,11 @@
 口”，《中》本作“肉烂可口”。“但须注意甲鱼肉不可与苋菜同食”。“甲鱼肉”，《中》本
 作“龟鳖肉”。
 
-\reciperef{143}。《四》本中脚注标记{\footnotesize\circled{1}}在“原料”段落中“鲢
+\reciperef{143}。《四》本中尾注标记{\footnotesize\circled{1}}在“原料”段落中“鲢
 鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本作“竹篾篦”。
 据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本作“……轻轻试一下”。据《中》本
-改。脚注{\footnotesize\circled{1}}中“而不是一般池塘养的鲢鱼”，《四》本无此句。
-据《中》本补。之后“但四川人……”，《四》本无“但”字。据《中》本补。脚注
+改。尾注{\footnotesize\circled{1}}中“而不是一般池塘养的鲢鱼”，《四》本无此句。
+据《中》本补。之后“但四川人……”，《四》本无“但”字。据《中》本补。尾注
 {\footnotesize\circled{1}}中“身圆口大”，《四》本作“身团口大”。据《中》本改。
 
 \reciperef{144}。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
@@ -282,14 +282,14 @@
 \reciperef{228}。“四张豆腐皮一叠，如是再重四张，共为两叠。”“叠”，《四》本作
 “迭”。径改。“如是”，《四》本作“如果”。径改。
 
-\reciperef{233}。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
+\reciperef{233}。《四》本“八分火”之后无尾注标记{\footnotesize\circled{1}}。据
 《八》本《中》本补。
 
 \reciperef{234}。“椿芽”，《四》本作“春芽”。径改。
 
 \reciperef{244}。“带皮”，海带。亦称海藻、昆布、海布。
 
-\reciperef{245}。“盐六分”，《四》本作“盐一分”。据《中》本改。《四》本无脚注%
+\reciperef{245}。“盐六分”，《四》本作“盐一分”。据《中》本改。《四》本无尾注%
 {\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据《中》本补。
 
 \reciperef{253}。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
