--- a/latex/recipe-195.tex
+++ b/latex/recipe-195.tex
@@ -100,7 +100,7 @@
 \end{figure}%
 \vbadness=10000%
 
-\step 作好的蝴蝶形海参摆于盘中，入笼蒸三分钟，定形时取出放汤碗内，碗内加特级清
+\step 做好的蝴蝶形海参摆于盘中，入笼蒸三分钟，定形时取出放汤碗内，碗内加特级清
 汤、胡椒、盐即成，“蝴蝶”由于糁的关系，每个均浮于汤面。
 
 \features
