Rename all the figure labels in recipe 195

--- a/latex/recipe-195.tex
+++ b/latex/recipe-195.tex
@@ -47,7 +47,7 @@
 
 \step 刺参先用开水泡发，洗净内外粗渣杂质，入炒锅内加清水以微火煨𤆵（约二十分
 钟）；捞起用刀片成二分厚的薄片，再切成一寸二分宽、一寸长，共二十四片，然后用刀
-尖雕成蝴蝶形。（如图\,\ref{fig:cutting-sea-cucumber}\,）
+尖雕成蝴蝶形。（如图\,\ref{fig:butterfly-shape}\,）
 
 \begin{wrapfigure}[7]{l}{9em}%
 \centering%
@@ -55,7 +55,7 @@
 \includegraphics[scale=1]{illustration-008.pdf}%
 \vspace{-.1875\baselineskip}%
 \caption{用海参雕成的蝴蝶形}%
-\label{fig:cutting-sea-cucumber}%
+\label{fig:butterfly-shape}%
 \end{wrapfigure}
 
 \step 鲤鱼去鳞、去头尾和刺，取净肉剁为细茸；猪肥膘肉洗净，剁为细茸；加蛋清一个
@@ -63,8 +63,8 @@
 
 \step 蝴蝶海参片投入三级清汤中，加盐煮约十分钟，而后使之入味，捞出铺于盘上以净
 布揩干，逐片把白色一面用蛋清豆粉抹匀，再用刀尖沾碗内的鱼糁放在蝴蝶片的中央，成
-为蝴蝶的腹部（如图\,\ref{fig:making-the-shape}\,）；每片用糁长一寸、宽三分、厚
-四分，形如橄榄，随后用手蘸清水涂抹光滑。
+为蝴蝶的腹部（如图\,\ref{fig:spreading-fish-paste}\,）；每片用糁长一寸、宽三
+分、厚四分，形如橄榄，随后用手蘸清水涂抹光滑。
 
 \step 冬笋去壳，切成六分长的细丝四十八根，其余均切为三分长的短丝；火腿切成三分
 长的细丝；用手把火腿丝和笋丝相间地横镶于腹部上面，另外，以两根笋丝镶于每个蝴蝶
@@ -78,7 +78,7 @@
 	\hspace{2em}\includegraphics[scale=1]{illustration-009.pdf}%
 	\vspace{-.4375\baselineskip}%
 	\caption{中央涂上鱼糁为蝴蝶腹部}
-	\label{fig:making-the-shape}
+	\label{fig:spreading-fish-paste}
 	\begingroup%
 	\small%
 	\noindent%
