Rename all the figure labels in recipe 254

--- a/latex/recipe-254.tex
+++ b/latex/recipe-254.tex
@@ -47,7 +47,7 @@
 \includegraphics[scale=1]{illustration-011.pdf}%
 \vspace{-.4375\baselineskip}%
 \caption{叉烧宣腿叉法}
-\label{fig:fork-roasting}%
+\label{fig:skewering-method}%
 \begingroup%
 \small%
 \noindent%
@@ -56,8 +56,8 @@
 \end{wrapfigure}
 
 \step 用刀将火腿均匀地切为三块，每块切成一寸三分宽、四寸半长，厚度为火腿本身的
-厚度，用铁叉平叉起来（如图\,\ref{fig:fork-roasting}\,）。将蛋清与豆粉调匀，涂
-于叉起来的火腿上以保持原味，而免烧时走油走味。
+厚度，用铁叉平叉起来（如图\,\ref{fig:skewering-method}\,）。将蛋清与豆粉调匀，
+涂于叉起来的火腿上以保持原味，而免烧时走油走味。
 
 \step 把杠炭三斤放入平炉上烧红，而后把叉好的火腿在平炉上以微火烘烤，要反复转动
 叉柄，约二十分钟，烤至火腿熟透心时，揩净叉尖后取下叉子。用刀把火腿每隔两分远切
