Rename all the figure labels in recipe 19

--- a/latex/recipe-019.tex
+++ b/latex/recipe-019.tex
@@ -68,7 +68,7 @@
 \quad\includegraphics[scale=1]{illustration-001.pdf}%
 \vspace{-.1875\baselineskip}%
 \caption{尖刀圆子做法}
-\label{fig:meatball}
+\label{fig:making-meatballs}
 \end{wrapfigure}%
 \vbadness=10000%
 炸五分钟，至炸成深牙黄色时捞出，晾冷待用（俗称酥肉）。
@@ -76,7 +76,7 @@
 \step 选用肥瘦相连的猪肉二两，洗净去皮，剁为肉茸，加干豆粉（二钱）、鸡蛋（一个
 去壳）、盐（三分）混合调匀，拨一部分摊于左手上面（平摊约四分厚、一寸半宽），右
 手持刀斜刮左手的肉茸为上大下小的三角条形（俗称鲫鱼背）共十六条，分开摆于盘内，
-入笼蒸十分钟后取出晾冷待用（图\,\ref{fig:meatball}\,俗称尖刀圆子）。
+入笼蒸十分钟后取出晾冷待用（图\,\ref{fig:making-meatballs}\,俗称尖刀圆子）。
 
 \step 熟猪心、猪舌均切成一寸半长的薄片。
 
@@ -104,7 +104,7 @@
 	\hbox{\fsfamily\scalebox{1}[1.142857]{丙}}%
 	\vspace{1.25\baselineskip}%
 	\caption{如意蛋卷制作过程}
-	\label{fig:egg-roll}
+	\label{fig:fortune-egg-rolls}
 	\vspace{1\baselineskip}%
 	\begingroup%
 	\small%
@@ -120,10 +120,11 @@
 
 \step 鸡蛋一个，去壳搅散。炒锅烧热，锅中擦净，稍用菜油涂匀，将蛋倾入，以手提耳
 锅转动，即摊成蛋皮，稍冷，蛋皮即自行脱落。把肥瘦相连的猪肉二两洗净，剁成细茸，
-加入水豆粉、盐、胡椒，调匀后铺于贴锅一面的蛋皮上（如图\,\ref{fig:egg-roll}\,%
-甲），两端向中央搓裹，成为两卷，中间相连（如图\,\ref{fig:egg-roll}\,乙），接口
-处涂少许豆粉粘好。然后平放盘内入笼蒸十五分钟，取出晾冷，用刀稍斜横切成一寸半宽
-的小块（俗称如意蛋卷）（如图\,\ref{fig:egg-roll}\,丙）。
+加入水豆粉、盐、胡椒，调匀后铺于贴锅一面的蛋皮上（如图\,%
+\ref{fig:fortune-egg-rolls}\,甲），两端向中央搓裹，成为两卷，中间相连（如图\,%
+\ref{fig:fortune-egg-rolls}\,乙），接口处涂少许豆粉粘好。然后平放盘内入笼蒸十
+五分钟，取出晾冷，用刀稍斜横切成一寸半宽的小块（俗称如意蛋卷）（如图\,%
+\ref{fig:fortune-egg-rolls}\,丙）。
 
 \step 用平底大碗一个，先将汆好的笋条、响皮摆在碗底；次将酥肉逐片摆成圆形，为第
 二层；又将尖刀圆子十六条分为每方四条摆成卍字形，为第三层；再将猪心、猪舌像铺瓦
