Delete one character - TU

--- a/latex/recipe-020.tex
+++ b/latex/recipe-020.tex
@@ -57,7 +57,7 @@
 \vspace{-.4375\baselineskip}%
 \includegraphics[scale=1]{illustration-003.pdf}%
 \vspace{-.5625\baselineskip}%
-\caption{松子肉包叠法图}%
+\caption{松子肉包叠法}%
 \label{fig:wrapping-method}%
 {\small 1.豆油皮\hspace{1em}2.肉丝\hspace{1em}3.叠好后}%
 \end{wrapfigure}%
