PDF metadata rewriting

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -39,10 +39,11 @@
 		pdfcreator={XeLaTeX},
 		pdfproducer={Quux System and Technology},
 		pdftoolbar={true},
-		pdftitle={四川菜谱1972重制版},
-		pdfsubject={四川菜谱},
-		pdfauthor={成都市饮食公司},
-		pdfkeywords={川菜},
+		pdftitle={Sichuan Cookbook 1972 Remake},
+		pdfsubject={312 Traditional Recipes: The Culinary History of Sichuan},
+		pdfauthor={Chengdu Catering Company},
+		pdfkeywords={Chinese-food, cookbook, culture, food, recipe, %
+			Sichuan, Szechuan, Szechwan},
 		pdflang={zh-CN},
 		pdfinfo={
 			GitCommitName={\gitcommitname},
