--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -116,10 +116,10 @@
 \cleardoublepage
 
 % Preface
-\hypertarget{preface}{}%
-\bookmark[dest=preface,level=section]{编印说明}%
+\hypertarget{editorial-notes-1972}{}%
+\bookmark[dest=editorial-notes-1972,level=section]{1972年编印说明}%
 \enlargethispage{.75\baselineskip}
-\input{preface.tex}
+\input{editorial-notes-1972.tex}
 \cleardoublepage
 
 \frontmatter
