--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -100,11 +100,11 @@
 \index{竹叶花椒}%
 \cleardoublepage
 
-\hypertarget{chairman-mao-quotes}{}%
-\bookmark[dest=chairman-mao-quotes,level=section]{毛主席語录}%
+\hypertarget{quotes-from-chairman-mao}{}%
+\bookmark[dest=quotes-from-chairman-mao,level=section]{毛主席語录}%
 \definecolor{pantone 185 c}{cmyk}{0, 1, 1, 0}
 \textcolor{pantone 185 c}{%
-	\input{chairman-mao-quotes.tex}
+	\input{quotes-from-chairman-mao.tex}
 }
 \cleardoublepage
 
