--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -92,10 +92,10 @@
 \enlargethispage{1.75\baselineskip}
 \input{title-page.tex}
 \clearpage
-\hypertarget{copyright}{}%
-\bookmark[dest=copyright,level=section]{版权页}%
+\hypertarget{copyright-page}{}%
+\bookmark[dest=copyright-page,level=section]{版权页}%
 \enlargethispage{1.75\baselineskip}
-\input{copyright.tex}
+\input{copyright-page.tex}
 \index{茨菰}%
 \index{竹叶花椒}%
 \cleardoublepage
