--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -76,10 +76,10 @@
 \null%
 \cleardoublepage
 
-\hypertarget{half-title}{}%
-\bookmark[dest=half-title,level=section]{书名页}%
+\hypertarget{half-title-page}{}%
+\bookmark[dest=half-title-page,level=section]{书名页}%
 \enlargethispage{1\baselineskip}
-\input{half-title.tex}
+\input{half-title-page.tex}
 \cleardoublepage
 
 \hypertarget{frontispiece}{}%
