Correct the comment

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -115,7 +115,7 @@
 \input{title-page-1972.tex}
 \cleardoublepage
 
-% Preface
+% Editorial notes 1972
 \hypertarget{editorial-notes-1972}{}%
 \bookmark[dest=editorial-notes-1972,level=section]{1972年编印说明}%
 \enlargethispage{.75\baselineskip}
