--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -505,11 +505,11 @@
 \setlength{\cookbookafterrecipeskip}{.6875\baselineskip plus 1.1875\baselineskip}%
 
 \begin{tocminipageleft}
-\begingroup
+\begingroup%
 \raggedbottom
 \vspace{.25\baselineskip}
 \input{recipe-265.tex}
-\endgroup
+\endgroup%
 \input{recipe-266.tex}
 \input{recipe-267.tex}
 \input{recipe-268.tex}
