--- a/latex/recipe-019.tex
+++ b/latex/recipe-019.tex
@@ -113,7 +113,7 @@
 	\null\hspace{3.5em}1.蛋皮；\hspace{1em}2.肉丝\\
 	\null\hspace{1.5em}乙、卷成两卷\\
 	\null\hspace{1.5em}丙、如意蛋卷
-	\endgroup
+	\endgroup%
 \end{minipage}
 \vspace{-.75\baselineskip}%
 \end{figure}%
