--- a/latex/quotes-from-chairman-mao.tex
+++ b/latex/quotes-from-chairman-mao.tex
@@ -61,7 +61,7 @@
 为什么人的问题，是一个根本的问题，原则的问题。
 
 \end{list}
-\endgroup
+\endgroup%
 
 % vim: filetype=tex noautoindent nojoinspaces
 % vim: fileencoding=utf-8 formatoptions+=m
