Slightly adjust the layout of the copyright page

--- a/latex/copyright-page.tex
+++ b/latex/copyright-page.tex
@@ -32,11 +32,11 @@
 \footnotesize%
 \singlespacing%
 \setlength{\parindent}{0pt}%
-\setlength{\parskip}{.1875\baselineskip}%
+\setlength{\parskip}{.375\baselineskip}%
 {\sffamily\bfseries Sichuan Cookbook 1972 Remake\!（四川菜谱1972重制版）}\\%
 by \textsc{Chengdu} Catering Company\!（成都市饮食公司）
 
-\null
+\vspace{.75\baselineskip}
 
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} 2023
 \textsc{Quux} System and Technology\!（馄饨系统与科技）\!\!\!.\\%
@@ -45,6 +45,7 @@ All rights reserved.
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
 
+\vspace{-.5\baselineskip}
 \begin{enumerate}
 \item Redistributions of source code must retain the above copyright notice,
       this list of conditions and the following disclaimer.
@@ -57,9 +58,10 @@ modification, are permitted provided that the following conditions are met:
       contributors may be used to endorse or promote products derived from
       this software without specific prior written permission.
 \end{enumerate}
+\vspace{-.5\baselineskip}
 
 \begingroup%
-\setstretch{.9375}%
+\setstretch{.6875}%
 \textsc{this software is provided by the copyright holders and contributors
 ``as is'' and any express or implied warranties, including, but not limited to,
 the implied warranties of merchantability and fitness for a particular purpose
@@ -71,14 +73,10 @@ interruption) however caused and on any theory of liability, whether in
 contract, strict liability, or tort (including negligence or otherwise)
 arising in any way out of the use of this software, even if advised of the
 possibility of such damage.}
-
-\endgroup
-
+\endgroup%
 \vspace{-.5\baselineskip}
 
 \vfill
-
-\setlength{\parskip}{.5\baselineskip}%
 
 Book design and collation by \textsc{Gong}~Jie\!（龚颉）\!\!\!.
 
