--- a/latex/recipe-280.tex
+++ b/latex/recipe-280.tex
@@ -40,7 +40,7 @@
 
 \preparation
 
-蛋黄和以水豆粉加一杓清水搅匀，锅烧至将红时倾进猪油，煎至七、八成火候，倾进鸡蛋
+蛋黄和以水豆粉加一勺清水搅匀，锅烧至将红时倾进猪油，煎至七、八成火候，倾进鸡蛋
 炒熟，随即加进瓜圆、桃米和白糖，炒转即成。起锅时淋上少许猪油，此系甜吃。如果咸
 食就不用瓜圆、桃米、白糖，加些火腿末和少许味精即可。
 
