--- a/latex/recipe-293.tex
+++ b/latex/recipe-293.tex
@@ -37,7 +37,7 @@
 \ingredient{口蘑（发胀洗净切成小瓣）}{三钱}
 \ingredient{豆粉}{一两}
 \ingredient{绍酒}{二两五}
-\ingredient{鸡汤}{三杓}
+\ingredient{鸡汤}{三勺}
 \ingredient{生鸡油}{六钱}
 \ingredient{胡椒、味精}{少许}
 \ingredient{鸡蛋（取白）}{二个}
