--- a/latex/recipe-308.tex
+++ b/latex/recipe-308.tex
@@ -37,7 +37,7 @@
 \ingredient{小苏打粉（碾细）}{少许}
 \ingredient{鸡蛋（取白搅散）}{三个}
 \ingredient{火腿（宰细）}{少许}
-\ingredient{浓母鸡汤汁}{三杓}
+\ingredient{浓母鸡汤汁}{三勺}
 \ingredient{绍酒}{三钱}
 \ingredient{食盐}{少许}
 \ingredient{胡椒}{少许}
