--- a/latex/recipe-284.tex
+++ b/latex/recipe-284.tex
@@ -39,7 +39,7 @@
 
 \preparation
 
-包谷粉和以蛋黄加两杓清水调匀，猪油在锅里煎至约七八成火候，即倒进调好的包谷粉炒
+包谷粉和以蛋黄加两勺清水调匀，猪油在锅里煎至约七八成火候，即倒进调好的包谷粉炒
 熟，水份要炒干，要炒翻沙，炒熟后加进瓜圆、桃米和白糖，速即炒转，动作要快速，防
 止巴锅。起锅时淋少许猪油，盛入盘中，同时将蛋白迅速掺泡，淋在上面。
 
