--- a/latex/recipe-269.tex
+++ b/latex/recipe-269.tex
@@ -35,7 +35,7 @@
 \ingredient{瘦猪肉}{二两五}
 \ingredient{鸡肝（以母鸡黄沙肝最好）}{四两}
 \ingredient{鸡脯肉}{四两}
-\ingredient{母鸡汤}{六杓}
+\ingredient{母鸡汤}{六勺}
 \ingredient{鸡蛋（取白）}{二个}
 \ingredient{绍酒}{六钱}
 \ingredient{食盐}{少许}
@@ -45,12 +45,12 @@
 
 竹荪以淘米水发胀后，轻轻搓几下漂入清水内。
 
-鸡肝洗净以刀背捶绒，将蛋白搅散掺入鸡肝内，并加入胡椒、食盐和鸡汤一杓，合拌调
+鸡肝洗净以刀背捶绒，将蛋白搅散掺入鸡肝内，并加入胡椒、食盐和鸡汤一勺，合拌调
 匀。以丝箩筛滤渣取汁，连续滤三次，然后将肝汁盛在碗内，蒸约十分钟即凝结成膏。蒸
 时火力要适度，火大则会起蜂窝眼，火小则引起沉淀，不能凝结。
 
-鸡汤五杓装在小铝锅内，在微火上烧沸，将浮油打起不要。将瘦猪肉用刀背捶绒，以冷汤
-调散倾入鸡汤内，并加进绍酒用杓搅转，俟汤再沸时用漏杓将沉渣捞起不要。再将鸡脯肉
+鸡汤五勺装在小铝锅内，在微火上烧沸，将浮油打起不要。将瘦猪肉用刀背捶绒，以冷汤
+调散倾入鸡汤内，并加进绍酒用勺搅转，俟汤再沸时用漏勺将沉渣捞起不要。再将鸡脯肉
 照样进行，并随时打净浮油，即成清汤（清汤时火力不宜大）。
 
 临吃前将清汤轻轻转入肝膏碗里，并将发胀漂净的竹荪切成寸节放入，蒸熟即成。
