--- a/latex/recipe-294.tex
+++ b/latex/recipe-294.tex
@@ -38,13 +38,13 @@
 \ingredient{胡椒}{少许}
 \ingredient{食盐}{少许}
 \ingredient{味精}{少许}
-\ingredient{鸡汤}{五杓}
+\ingredient{鸡汤}{五勺}
 
 \preparation
 
-冬苋菜洗干净，滴干水份。油煎辣后倾入冬苋菜，炒缩筋（厨称煸死），加进鸡汤二杓，
-置于文火上烧至六成熟。同时以三杓鸡汤烧沸，加进味精、干贝、绍酒、食盐和胡椒，将
-冬苋菜用漏杓捞起滤干转入汤内，再烧片刻。起锅时淋上少许水豆粉扯芡即成（菜不宜煮
+冬苋菜洗干净，滴干水份。油煎辣后倾入冬苋菜，炒缩筋（厨称煸死），加进鸡汤二勺，
+置于文火上烧至六成熟。同时以三勺鸡汤烧沸，加进味精、干贝、绍酒、食盐和胡椒，将
+冬苋菜用漏勺捞起滤干转入汤内，再烧片刻。起锅时淋上少许水豆粉扯芡即成（菜不宜煮
 得太烂，否则会失去原味）。
 
 \features
