--- a/latex/recipe-292.tex
+++ b/latex/recipe-292.tex
@@ -42,7 +42,7 @@
 \ingredient{黄花}{数根}
 \ingredient{冬菇（发胀）}{数片}
 \ingredient{胡椒}{少许}
-\ingredient{鸡汤}{四杓}
+\ingredient{鸡汤}{四勺}
 \ingredient{食盐}{少许}
 \ingredient{鲜牛奶}{二两}
 \ingredient{绍酒}{一两二}
