Revise the ingredients

--- a/latex/recipe-265.tex
+++ b/latex/recipe-265.tex
@@ -33,8 +33,8 @@
 
 \ingredient{水牛脑顶肉（不宜用黄牛）}{六斤}
 \ingredient{冰糖色}{七钱}
-\ingredient{母鸡汤（炒菜勺）}{三勺}
-\ingredient{肉汤（炒菜勺）}{三勺}
+\ingredient{母鸡汤}{（炒菜勺）三勺}
+\ingredient{肉汤}{（炒菜勺）三勺}
 \ingredient{鲜菜（或心）}{一斤}
 \ingredient{绍酒}{一两二}
 \ingredient{生鸡油}{一两二}
