Revise the PDF metadata

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -61,15 +61,16 @@
 		pdfcreator={XeLaTeX},
 		pdfproducer={Quux System and Technology},
 		pdftoolbar={true},
-		pdftitle={四川菜谱1972重制版},
-		pdfsubject={封面设计},
-		pdfauthor={泥偶},
-		pdfkeywords={封面},
+		pdftitle={Sichuan Cookbook 1972 Remake},
+		pdfsubject={Book Cover Design},
+		pdfauthor={GONG Jie},
+		pdfkeywords={Book cover},
 		pdflang={zh-CN},
 		pdfinfo={
 			GitCommitName={\gitcommitname},
 			GitCommitHash={\gitcommithash},
 			GitCommitterDate={\gitcommitterdate},
+			PDFBuildDate={\pdfbuilddate},
 			PDFBuildHost={\pdfbuildhost}
 		},
 		hidelinks
