Update the PDF metadata, pdfproducer

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -37,7 +37,7 @@
 		pdfprintscaling={AppDefault},
 		pdfpicktraybypdfsize={true},
 		pdfcreator={XeLaTeX},
-		pdfproducer={Quux System and Technology},
+		pdfproducer={Quux Script-Shift Scribe},
 		pdftoolbar={true},
 		pdftitle={Sichuan Cookbook 1972 Remake},
 		pdfsubject={312 Traditional Recipes: The Culinary History of Sichuan},
