--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -59,7 +59,7 @@
 		pdfprintscaling={AppDefault},
 		pdfpicktraybypdfsize={true},
 		pdfcreator={XeLaTeX},
-		pdfproducer={Quux System and Technology},
+		pdfproducer={Quux Script-Shift Scribe},
 		pdftoolbar={true},
 		pdftitle={Sichuan Cookbook 1972 Remake},
 		pdfsubject={Book Cover Design},
