Revise the ingredients

--- a/latex/recipe-141.tex
+++ b/latex/recipe-141.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{青鳝（十三两）}{一条}
+\ingredient{青鳝}{（十三两）一条}
 \ingredient{特级清汤}{三斤}
 \ingredient{水发竹荪}[\footnotemark]{五朵}
 \ingredient{生猪网油}{二两五}
