Revise the ingredients

--- a/latex/recipe-111.tex
+++ b/latex/recipe-111.tex
@@ -46,7 +46,7 @@
 \ingredient{清汤}{四斤}
 \ingredient{菜油}{一斤耗一两}
 \ingredient{化猪油}{三两}
-\ingredient{新纱布（见方一尺五）}{一幅}
+\ingredient{新纱布}{（见方一尺五）一幅}
 
 \preparation
 
