Revise the ingredients

--- a/latex/recipe-066.tex
+++ b/latex/recipe-066.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{仔鸡（二斤半）}{一只}
+\ingredient{仔鸡}{（二斤半）一只}
 \ingredient{姜}{三钱}
 \ingredient{醋}{六分}
 \ingredient{干辣椒}{六钱}
