Revise the ingredients

--- a/latex/recipe-152.tex
+++ b/latex/recipe-152.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{活鲤鱼一条}{（约一斤二两）}
+\ingredient{活鲤鱼}{一条（约一斤二两）}
 \ingredient{鸡蛋清}{三个}
 \ingredient{姜}{二钱}
 \ingredient{化猪油}{一两五}
