Revise the ingredients

--- a/latex/recipe-150.tex
+++ b/latex/recipe-150.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{鲤鱼一条}{（一斤左右）}
+\ingredient{鲤鱼}{一条（一斤左右）}
 \ingredient{猪肥膘肉}{四两}
 \ingredient{鸡蛋}{三个}
 \ingredient{火腿}{五钱}
