--- a/latex/recipe-289.tex
+++ b/latex/recipe-289.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{老肥鸭（重约三斤多）}{一只}
+\ingredient{老肥鸭}{（重约三斤多）一只}
 \ingredient{绍酒}{六钱}
 \ingredient{虫草}{六钱}
 \ingredient{食盐}{酌量}
