Revise the ingredients

--- a/latex/recipe-275.tex
+++ b/latex/recipe-275.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{嫩肥母鸡（约三斤半左右）}{一只}
+\ingredient{嫩肥母鸡}{（约三斤半左右）一只}
 \ingredient{生姜丝}{少许}
 \ingredient{葱丝}{少许}
 \ingredient{肥瘦猪肉丝}{二两}
