Revise the ingredients

--- a/latex/recipe-290.tex
+++ b/latex/recipe-290.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{活鸭（需选三至四斤重，肉质肥嫩的鸭子）}{一只}
+\ingredient{活鸭}{（需选三至四斤重，肉质肥嫩的鸭子）一只}
 \ingredient{冰糖色}{少许}
 \ingredient{味精}{四分}
 \ingredient{网油}{一斤半}
