--- a/latex/recipe-277.tex
+++ b/latex/recipe-277.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{嫩公鸡（约重二斤）}{一只}
+\ingredient{嫩公鸡}{（约重二斤）一只}
 \ingredient{花椒}{约四十粒}
 \ingredient{生姜}{少许}
 \ingredient{青葱}{一两}
