Revise the ingredients

--- a/latex/recipe-272.tex
+++ b/latex/recipe-272.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{岩鲤（二斤左右）}{一尾}
+\ingredient{岩鲤}{（二斤左右）一尾}
 \ingredient{猪肥膘（切成小指头般大的颗粒）}{一两}
 \ingredient{黄葱（切颗）}{六钱}
 \ingredient{生姜米}{少许}
