Revise the ingredients

--- a/latex/recipe-287.tex
+++ b/latex/recipe-287.tex
@@ -31,8 +31,8 @@
 
 \ingredients
 
-\ingredient{肥头鱼（二斤左右）}{一尾}
-\ingredient{火腿}{（切小片）一两}
+\ingredient{肥头鱼}{（二斤左右）一尾}
+\ingredient{火腿（切小片）}{一两}
 \ingredient{胡椒}{少许}
 \ingredient{网油}{六两}
 \ingredient{食盐}{少许}
