Revise the ingredients

--- a/latex/recipe-307.tex
+++ b/latex/recipe-307.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{嫩仔公鸡（约二斤半重）}{一只}
+\ingredient{嫩仔公鸡}{（约二斤半重）一只}
 \ingredient{净冬笋}{二两}
 \ingredient{芹黄}{一两}
 \ingredient{泡海椒}{三个}
