Revise the paper thickness for 80 gsm paper. Add reference paper thickness for 90 gsm paper.

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -34,12 +34,13 @@
 	% Double A Uncoated Paper
 	%  Weight      Thickness    Description
 	% --------------------------------------------------------------------
-	%  70 gsm    93.6 micron    Copy paper for everyday use
-	%  80 gsm   103.2 micron    Premium multi-purpose copy paper
+	%  70 gsm   93.60 micron    Copy paper for everyday use
+	%  80 gsm  104.72 micron    Premium multi-purpose copy paper
+	%  90 gsm  107.16 micron    Copy paper for color printing
 	%
 	% The spine width calculation
-	% ( 352 / 2 ) * 103.2 micron = 18.1632 mm
-	spinewidth=18.1632mm, % For 80 gsm copy paper
+	% ( 352 / 2 ) * 104.72 micron = 18.43072 mm
+	spinewidth=18.43072mm, % For 80 gsm copy paper
 	flapwidth=0mm,
 	wrapwidth=0mm,
 	bleedwidth=3mm,
