--- a/latex/recipe-133.tex
+++ b/latex/recipe-133.tex
@@ -35,7 +35,7 @@
 \ingredient{猪肥瘦肉}{三两}
 \ingredient{白糖}{二钱}
 \ingredient{香油}{一两}
-\ingredient{菜芽}{一两}
+\ingredient{芽菜}{一两}
 \ingredient{姜}{五钱}
 \ingredient{酱油}{三钱}
 \ingredient{清汤}{六两}
