--- a/latex/recipe-118.tex
+++ b/latex/recipe-118.tex
@@ -59,7 +59,7 @@
 碗将蛋清和干豆粉搅匀，加料酒、鸭肝片一起搅匀待用。
 
 \step 锅放炉上用旺火烧红，倒入猪油烧至六成热。将豆粉、鸭肝搅匀放入油中拨散；再
-将蒜片、姜片、泡红辣椒、兰片、口蘑片等依次放入锅中炒匀；随后将小碗中的水豆盼等
+将蒜片、姜片、泡红辣椒、兰片、口蘑片等依次放入锅中炒匀；随后将小碗中的水豆粉等
 物搅匀入锅中，炒匀起锅盛在盘中即成。
 
 \features
