--- a/latex/recipe-116.tex
+++ b/latex/recipe-116.tex
@@ -62,7 +62,7 @@
 骨尽头处开始用刀剔除骨头，一直剔到鸭尾；除两翅不剔骨外，其余骨头须全部剔出不用
 （在剔骨过程中必须保持鸭肉的完整，不要弄破鸭皮）。然后将鸭翻过来（因为在剔骨时
 鸭皮翻在里面，肉在外面，故须翻过来），使鸭皮朝外，成为一只无骨的完整全鸭。再从
-蒸笼内取出八宝掐全部装入鸭腹内，在刀口处将鸭颈皮打一个结，以免腹中的馅漏出。然
+蒸笼内取出八宝馅全部装入鸭腹内，在刀口处将鸭颈皮打一个结，以免腹中的馅漏出。然
 后放入汤锅中烫三分钟后捞出，再入清水中，摘尽茸毛。用料酒、盐、胡椒面等和匀，抹
 满鸭的全身。将鸭腹朝下，鸭背向上放于大蒸碗中，鸭头放于鸭背两翅的中间，上笼蒸一
 点半钟，出笼晾干水气。
