Fix character spacing when #3 for \ingredient begins with a left parenthesis

--- a/latex/cookbook.cls
+++ b/latex/cookbook.cls
@@ -303,7 +303,11 @@
 			\mbox{%
 				\hspace{2em}%
 				\makebox[9em][s]{%
-					\mbox{####1####2}\hfil\mbox{\null####3}%
+					\ifthenelse{\lengthtest{\spanwidth>9em}}{%
+						\mbox{####1####2####3}%
+					}{%
+						\mbox{####1####2}\hfil\mbox{\null####3}%
+					}%
 				}%
 				\hspace{2em}%
 			}%
