Use the simplified form of YU

--- a/latex/quotes-from-chairman-mao.tex
+++ b/latex/quotes-from-chairman-mao.tex
@@ -33,7 +33,7 @@
 \begin{center}
 {%
 	\huge\bfseries%
-	{\hbadness=1500\makebox[5.6em][s]{毛主席語录}}
+	{\hbadness=1500\makebox[5.6em][s]{毛主席语录}}
 }
 \end{center}
 
