Use the simplified form of YU

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -101,7 +101,7 @@
 \cleardoublepage
 
 \hypertarget{quotes-from-chairman-mao}{}%
-\bookmark[dest=quotes-from-chairman-mao,level=section]{毛主席語录}%
+\bookmark[dest=quotes-from-chairman-mao,level=section]{毛主席语录}%
 \definecolor{pantone 185 c}{cmyk}{0, 1, 1, 0}
 \textcolor{pantone 185 c}{%
 	\input{quotes-from-chairman-mao.tex}
