Update the copyright informaiton

--- a/latex/copyright-page.tex
+++ b/latex/copyright-page.tex
@@ -38,7 +38,7 @@ by \textsc{Chengdu} Catering Company\!（成都市饮食公司）
 
 \vspace{.75\baselineskip}
 
-Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} 2023
+Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} 2023--2025
 \textsc{Quux} System and Technology\!（馄饨系统与科技）\!\!\!.\\%
 All rights reserved.
 
