Remove an enumeration commma

--- a/latex/recipe-044.tex
+++ b/latex/recipe-044.tex
@@ -48,7 +48,7 @@
 \preparation
 
 \step 木耳泡胀，去沙，择足；鱼辣椒摘把，去籽，切马耳朵；小白菜择洗，留心；姜蒜
-去皮，切小方片；葱切七、八分长的节。
+去皮，切小方片；葱切七八分长的节。
 
 \step 猪肝去筋缠，边沿体薄处用片刀，体厚处用切刀；切片时都要薄，越薄越好，要大
 张不烂。
