Remove an enumeration commma

--- a/latex/recipe-216.tex
+++ b/latex/recipe-216.tex
@@ -56,7 +56,7 @@
 
 \step 将炒锅放于旺火上，倒下化猪油烧至六成热时，将拌好的豆芽瓣，做成一寸过心、
 三分厚的小圆饼，共做二十四个，边做边投入油锅炸至稍带黄色捞起。再将锅内的油烧至
-七、八成热时，将炸好的豆芽饼一并投入油锅内炸成金黄色，滗去余油，淋入香油，起锅
+七八成热时，将炸好的豆芽饼一并投入油锅内炸成金黄色，滗去余油，淋入香油，起锅
 摆入盘的中央。
 
 \step 将撕好或切好的生菜拌上糖、醋、香油，镶于长盘的两边，走菜时再兑一个椒盐碟
