--- a/latex/recipe-253.tex
+++ b/latex/recipe-253.tex
@@ -51,7 +51,7 @@
 \step 鸽子三只，宰杀后去血，煺毛，从背脊上顺着割开，挖去五脏，去掉足爪；清洗干
 净后，用手将盐、酱油、料酒等在鸽的全身内外抹匀，然后将鸽的两翅翻向鸽背盘起。
 
-在炒锅内放入猪油置于旺火上烧至七、八成热，将鸽子炸五分钟捞起，用蒸碗装好，加
+在炒锅内放入猪油置于旺火上烧至七八成热，将鸽子炸五分钟捞起，用蒸碗装好，加
 入姜、葱白、花椒、清汤等佐料；用一种有拉力的皮筋纸蒙紧碗口，在笼上蒸约两小时
 半（根据鸽的老嫩增减蒸的时间，以骨松翅裂为度）。
 
