Remove an enumeration commma

--- a/latex/recipe-281.tex
+++ b/latex/recipe-281.tex
@@ -38,7 +38,7 @@
 
 \preparation
 
-将鸡蛋敲破搅散，加进火腿、食盐搅匀，再将猪油在将要烧红的锅里煎至七、八成火候，
+将鸡蛋敲破搅散，加进火腿、食盐搅匀，再将猪油在将要烧红的锅里煎至七八成火候，
 倾进鸡蛋，加盖置文火上烘至带黄色时，翻转，再烘约三四分钟即成。整吃、切块（切梭
 子块）均可。
 
