Remove an enumeration commma

--- a/latex/recipe-252.tex
+++ b/latex/recipe-252.tex
@@ -44,7 +44,7 @@
 \preparation
 
 \step 将蹄筋用清水洗净、晾干。将锅放于炉上，放上猪油，将蹄筋放入锅内，用温油浸
-炸，有八成泡性时捞起晾冷；再用清水冰起泡𤆵，又用七、八成温水泡起，滗去油水；再
+炸，有八成泡性时捞起晾冷；再用清水冰起泡𤆵，又用七八成温水泡起，滗去油水；再
 用温水泡三、四次，蹄筋的油已除尽即可。将每根蹄筋对破，边子另用，每半边片成二
 片，同样将十六根蹄筋片完（但薄的就不片）；片后放在冷水内然后捞起用刀尖劖（不能
 将蹄筋劖断），再放入碗内用开水过两次；滗去；再放下开水，并放入草碱四分，用盘子
