Remove an enumeration commma

--- a/latex/recipe-246.tex
+++ b/latex/recipe-246.tex
@@ -53,7 +53,7 @@
 掉脚爪，用清水洗净，将鸽子的两翅盘向鸽背，用手将盐、料酒、酱油、姜、花椒、葱等
 放入鸽子的内外抹匀，放在盘内浸渍半小时。
 
-\step 将锅放在旺火上，放入化猪油，烧至七、八成热，将渍好的鸽子捞起（剩下的作料
+\step 将锅放在旺火上，放入化猪油，烧至七八成热，将渍好的鸽子捞起（剩下的作料
 待用）投入锅内，约炸五分钟捞起，用蒸碗放好，将渍鸽子时用的作料再加上清汤，从鸽
 子上淋下；用一种有拉力的皮筋纸蒙于碗口，放进蒸笼约蒸二点半钟（根据鸽子的老嫩决
 定时间的长短），骨松翅裂为度。
