Remove an enumeration commma

--- a/latex/recipe-082.tex
+++ b/latex/recipe-082.tex
@@ -49,7 +49,7 @@
 
 \preparation
 
-\step 仔鸡切成八、九分大的块子，葱切节，姜拍松，加料酒、盐将鸡块拌匀，浸渍五分
+\step 仔鸡切成八九分大的块子，葱切节，姜拍松，加料酒、盐将鸡块拌匀，浸渍五分
 钟；蛋清、干豆粉调芡。
 
 \step 泡辣椒去蒂和籽，宰碎；葱切细花；姜、蒜切细米。
