--- a/latex/recipe-078.tex
+++ b/latex/recipe-078.tex
@@ -52,7 +52,7 @@
 洗一次。再用刀尖将鸡脯及鸡腿的肉剖开，把腿、翅、骨微微宰断，用手将盐、葱、姜、
 酱油、醪糟、料酒、花椒等抹在鸡的内外，抹匀，渍一小时。
 
-\step 将锅放在旺火上，倒下菜油，烧至八、九成热时将鸡取出搽干（原汁留用），投入
+\step 将锅放在旺火上，倒下菜油，烧至八九成热时将鸡取出搽干（原汁留用），投入
 油锅内炸熟炸透；滗去余油，将抹鸡时的原汁一并倒入锅内，放下胡椒、白糖、香油、味
 精、清汤，将锅内的滋汁收至一半为止，然后将鸡捞起放在墩子上宰成一寸二长、五分宽
 的长方块，按照鸡的原形摆入盘内（鸡脯向上）。将锅内滋汁滗入碗内，将碗内的姜、
