Remove an enumeration commma

--- a/latex/recipe-066.tex
+++ b/latex/recipe-066.tex
@@ -47,7 +47,7 @@
 
 \preparation
 
-\step 选肥嫩仔鸡，宰杀后除净毛，砍去头足，除去内脏，剔除骨头。将鸡肉切成六、七
+\step 选肥嫩仔鸡，宰杀后除净毛，砍去头足，除去内脏，剔除骨头。将鸡肉切成六七
 分大的小块，盛入大碗中。用拍松的姜、大葱放入鸡肉中，再加料酒、盐、酱油、一起拌
 匀，稍腌后待用。
 
