Remove an enumeration commma

--- a/latex/recipe-010.tex
+++ b/latex/recipe-010.tex
@@ -51,7 +51,7 @@
 不太烫手时，按肉纹横切成两块。把肉块放在菜墩上，片成三寸长的薄片，愈薄愈好。
 
 \step 萝卜去皮，洗净，切成约一寸五长、一寸宽、三分厚的片，连同葱白放入煮肉汤中
-煮六、七分钟。至萝卜片刚𤆵，即将肉片倒入锅中搅匀，与萝卜片同煮二、三分钟。待萝
+煮六七分钟。至萝卜片刚𤆵，即将肉片倒入锅中搅匀，与萝卜片同煮二、三分钟。待萝
 卜𤆵透时加入味精，即成“连锅”。（烹制中随时注意把锅盖好。）
 
 \step 花椒十粒，与干辣椒一同放入锅中，在微火上用手铲不停翻炒，至辣椒刚炒酥时滴
