Remove an enumeration commma

--- a/latex/recipe-090.tex
+++ b/latex/recipe-090.tex
@@ -49,7 +49,7 @@
 散拌匀，务使合为一体，再将猪肉茸放盆中调散拌匀，然后放入鸡蛋清二个，左手抓住盆
 边，右手用力将各料搅动。搅时要注意顺着一定的方向搅，不能改变方向乱搅，否则便要
 出次品或废品。搅至各料合为一体，颜色白而发亮，看不出一点杂质时，加盐，再如前法
-搅六、七十下。随后加入清水再搅四、五十下，便成为“鸡糁”。
+搅六七十下。随后加入清水再搅四、五十下，便成为“鸡糁”。
 
 \step 熟肥膘肉切成一分厚，直径一寸二的圆形片二十四片。选用鲜红透亮的瘦火腿，先
 切薄片，再切细丝，最后剁成极细的末。白头韭菜去叶不用，将白头切成三分长的段，漂
