Remove an enumeration commma

--- a/latex/recipe-016.tex
+++ b/latex/recipe-016.tex
@@ -59,7 +59,7 @@
 粉沾在肉片上。青豆（即嫩黄豆，嫩时为青色）用清水洗净。
 
 \step 将鲜荷叶用清水洗净，入开水里烫一下，使它柔软不易折断；然后切成四寸长的等
-边三角形共二十张，取肥肉片一片放在叶内，再放入青豆五、六粒，上面摆上瘦肉一片包
+边三角形共二十张，取肥肉片一片放在叶内，再放入青豆五六粒，上面摆上瘦肉一片包
 好，一共包成二十个，摆入盘内上笼蒸三小时即熟，取出即可食用。
 
 \features
