Remove an enumeration commma

--- a/latex/recipe-044.tex
+++ b/latex/recipe-044.tex
@@ -55,7 +55,7 @@
 
 \step 盐、咸红酱油、料酒、胡椒、水豆粉、汤少许，兑成滋汁；猪肝用水豆粉调拌均匀。
 
-\step 炒锅在旺火上烧红后，将油舀入，浪匀滗去；另换油入锅，烧至五、六成下肝片，
+\step 炒锅在旺火上烧红后，将油舀入，浪匀滗去；另换油入锅，烧至五六成下肝片，
 用瓢子推出括进。炒散后，下木耳等小副料，炒转后，烹滋汁，从锅边下，几簸起锅，捻
 花椒面。
 
